@startuml

title __AI's Class Diagram__\n

  namespace com.codecool.dungeoncrawl {
    namespace AI {
      class com.codecool.dungeoncrawl.AI.AttackMovement {
          - dx : int
          - dy : int
          + AttackMovement()
          + getDx()
          + getDy()
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace AI {
      class com.codecool.dungeoncrawl.AI.AttackPhase {
          - neighbours : int[][]
          + AttackPhase()
          + freePosition()
          + loseHealth()
          + monsterDies()
          + playerDies()
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace AI {
      class com.codecool.dungeoncrawl.AI.RandomMovement {
          - dx : int
          - dxRandom : Random
          - dy : int
          - dyRandom : Random
          - options : int[]
          - speed : Random
          + RandomMovement()
          + getDx()
          + getDy()
          + getMap()
          + randomSpeed()
      }
    }
  }
  

  com.codecool.dungeoncrawl.AI.AttackPhase o-- com.codecool.dungeoncrawl.display.GameOver : gameOver
  com.codecool.dungeoncrawl.AI.AttackPhase o-- com.codecool.dungeoncrawl.logic.actors.Actor : monster
  com.codecool.dungeoncrawl.AI.AttackPhase o-- com.codecool.dungeoncrawl.logic.actors.Actor : player
  com.codecool.dungeoncrawl.AI.RandomMovement o-- com.codecool.dungeoncrawl.logic.GameMap : map


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
